force-app/main/default/objects/Activity/fields/Activity_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Activity_ID_18__c</fullName>
    <description>Campo de ID de Salesforce de 18 digitos</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo de ID de Salesforce de 18 digitos</inlineHelpText>
    <label>Activity ID 18</label>
    <type>Text</type>
</CustomField>