force-app/main/default/objects/Activity/fields/msf_AttributeFour__c.field-meta.xml
<CustomField>
    <fullName>msf_AttributeFour__c</fullName>
    <label>Atributo 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>