force-app/main/default/objects/Activity/fields/msf_AttributeSix__c.field-meta.xml
<CustomField>
    <fullName>msf_AttributeSix__c</fullName>
    <label>Atributo 6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>