force-app/main/default/objects/Activity/fields/msf_AttributeThree__c.field-meta.xml
<CustomField>
    <fullName>msf_AttributeThree__c</fullName>
    <label>Atributo 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>