force-app/main/default/objects/Activity/fields/msf_Campaign__c.field-meta.xml
<CustomField>
    <fullName>msf_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Campaña de la acción que generó la tarea, por ejemplo si es el envío de un Kit de Bienvenida de socio, la campaña por la que entró este socio. Se rellenará automáticamente si aplica</inlineHelpText>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Interacciones</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>