force-app/main/default/objects/Activity/fields/msf_ChainedTaskBlock__c.field-meta.xml
<CustomField>
    <fullName>msf_ChainedTaskBlock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bloque Tarea Encadenada</label>
    <referenceTo>msf_ChainedTaskBlock__c</referenceTo>
    <relationshipLabel>Actividades</relationshipLabel>
    <relationshipName>Actividades</relationshipName>
    <type>Lookup</type>
</CustomField>