force-app/main/default/objects/Activity/fields/msf_CloseDescription__c.field-meta.xml
<CustomField>
    <fullName>msf_CloseDescription__c</fullName>
    <label>Descripción de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>msf_CloseType__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agradecimiento realizado.</fullName>
            </value>
            <value>
                <fullName>Alta socio</fullName>
            </value>
            <value>
                <fullName>Argumentada</fullName>
            </value>
            <value>
                <fullName>Asistirá al evento</fullName>
            </value>
            <value>
                <fullName>Aumentará cuota por otro canal</fullName>
            </value>
            <value>
                <fullName>Aumento de cuota</fullName>
            </value>
            <value>
                <fullName>Aumento de cuota/donativo reciente</fullName>
            </value>
            <value>
                <fullName>Baja</fullName>
            </value>
            <value>
                <fullName>Baja definitiva. Hará donativos</fullName>
            </value>
            <value>
                <fullName>Baja temporal/situación economica</fullName>
            </value>
            <value>
                <fullName>Baja temporal/vivir fuera</fullName>
            </value>
            <value>
                <fullName>Cerrada colaboración por otro canal</fullName>
            </value>
            <value>
                <fullName>Comunica no asistencia en llamada de confirmación</fullName>
            </value>
            <value>
                <fullName>Cree que ya aporta suficiente</fullName>
            </value>
            <value>
                <fullName>Disgustado con MSF (en general)</fullName>
            </value>
            <value>
                <fullName>Disminución de cuota</fullName>
            </value>
            <value>
                <fullName>Dona a través del cónyuge</fullName>
            </value>
            <value>
                <fullName>Donativo</fullName>
            </value>
            <value>
                <fullName>Donativo otros canales no web</fullName>
            </value>
            <value>
                <fullName>Donativo reciente a otras ONGs</fullName>
            </value>
            <value>
                <fullName>Donativo y Aumento de cuota</fullName>
            </value>
            <value>
                <fullName>Duplicado</fullName>
            </value>
            <value>
                <fullName>El donativo anterior fue extraordinario</fullName>
            </value>
            <value>
                <fullName>Eliminado por petición MSF</fullName>
            </value>
            <value>
                <fullName>Enviará cupon</fullName>
            </value>
            <value>
                <fullName>Enviar un email con la información.</fullName>
            </value>
            <value>
                <fullName>Error en la frecuencia/importe. Sigue siendo socio</fullName>
            </value>
            <value>
                <fullName>Fallecido</fullName>
            </value>
            <value>
                <fullName>Hace un donativo por la web</fullName>
            </value>
            <value>
                <fullName>Hará donativo/socio por otro canal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>