force-app/main/default/objects/Activity/fields/msf_CloseType__c.field-meta.xml
<CustomField>
    <fullName>msf_CloseType__c</fullName>
    <label>Tipo de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No util</fullName>
                <label>No útil</label>
            </value>
            <value>
                <fullName>Negativo</fullName>
            </value>
            <value>
                <fullName>Potencial</fullName>
            </value>
            <value>
                <fullName>Positivo</fullName>
            </value>
            <value>
                <fullName>Descargada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>