force-app/main/default/objects/Activity/fields/msf_Family__c.field-meta.xml
<CustomField>
    <fullName>msf_Family__c</fullName>
    <label>Familia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_Family</valueSetName>
    </valueSet>
</CustomField>