force-app/main/default/objects/Activity/fields/msf_InboundOutbound__c.field-meta.xml
<CustomField>
    <fullName>msf_InboundOutbound__c</fullName>
    <label>Sentido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_InboundOutbound</valueSetName>
    </valueSet>
</CustomField>