force-app/main/default/objects/Activity/fields/msf_IsFromLastMonths__c.field-meta.xml
<CustomField>
    <fullName>msf_IsFromLastMonths__c</fullName>
    <formula>IF(OR( ActivityDate &gt;= (TODAY() - 365)
,
ISPICKVAL(msf_Channel__c,&quot;Llamada&quot;) &amp;&amp; (ActivityDate &gt;= (TODAY() - 365*5)),
ISPICKVAL(msf_Thematic__c,&quot;Certificado fiscal&quot;),
ISPICKVAL(msf_Thematic__c,&quot;Encuestas&quot;),
ISPICKVAL(msf_Thematic__c,&quot;Herencias y Legados&quot;),
Subject=&quot;Se Queja Presión en Captación Fondos&quot;,
Subject=&quot;Se Queja Por Llamadas Telemarketing&quot;,
Subject=&quot;Solicita Información Regalo Solidario&quot;
),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Últimos meses</label>
    <type>Checkbox</type>
</CustomField>