force-app/main/default/objects/Activity/fields/msf_IsFromLastMonthsBool__c.field-meta.xml
<CustomField>
    <fullName>msf_IsFromLastMonthsBool__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Nuevo campo para comprobar si la fecha de cierre esta dentro del ultimo año,  si es del tipo Llamada en los últimos 5 años, si es de temática &apos;Certificado fiscal&apos;, &apos;Encuestas&apos; o &apos;Herencias y Legados&apos;, o si el sujeto es: &apos;Se Queja Presión en Captación Fondos&apos;, &apos;Se Queja Por Llamadas Telemarketing&apos; o &apos;Solicita Información Regalo Solidario&apos;.</description>
    <label>Últimos meses Boolean</label>
    <type>Checkbox</type>
</CustomField>