force-app/main/default/objects/Activity/fields/msf_LeadSource__c.field-meta.xml
<CustomField>
    <fullName>msf_LeadSource__c</fullName>
    <inlineHelpText>Canal de entrada de la acción que generó la tarea, por ejemplo si es el envío de un Kit de Bienvenida de socio, el canal de entrada por la que entró este socio. Se rellenará automáticamente si aplica.</inlineHelpText>
    <label>Canal de entrada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_LeadSource1</valueSetName>
    </valueSet>
</CustomField>