force-app/main/default/objects/Activity/fields/msf_Owner__c.field-meta.xml
<CustomField>
    <fullName>msf_Owner__c</fullName>
    <label>Propietario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_ServiceOwner</valueSetName>
    </valueSet>
</CustomField>