force-app/main/default/objects/Activity/fields/msf_ParentTaskId__c.field-meta.xml
<CustomField>
    <fullName>msf_ParentTaskId__c</fullName>
    <label>Id Tarea Madre</label>
    <length>20</length>
    <type>Text</type>
</CustomField>