force-app/main/default/objects/Activity/fields/msf_ParentTaskUrl__c.field-meta.xml
<CustomField>
    <fullName>msf_ParentTaskUrl__c</fullName>
    <formula>IF(ISBLANK(msf_ParentTaskId__c) , 
				&quot;&quot;, 
				HYPERLINK(&quot;/&quot; &amp; msf_ParentTaskId__c, &quot;Tarea Madre&quot;, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tarea Madre</label>
    <type>Text</type>
</CustomField>