force-app/main/default/objects/Activity/fields/msf_RelatedContact__c.field-meta.xml
<CustomField>
    <fullName>msf_RelatedContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto relacionado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Organization Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Actividades contacto de organización</relationshipLabel>
    <relationshipName>Contacto</relationshipName>
    <type>Lookup</type>
</CustomField>