force-app/main/default/objects/Activity/fields/msf_RelatedTask__c.field-meta.xml
<CustomField>
    <fullName>msf_RelatedTask__c</fullName>
    <description>Campo para hacer reports de Tareas Hijas;</description>
    <formula>IF ( ISNULL(msf_ParentTaskId__c) || ISBLANK(msf_ParentTaskId__c) ,  LEFT(Id, 15), LEFT(msf_ParentTaskId__c, 15))</formula>
    <label>Tarea Relacionada Report</label>
    <type>Text</type>
</CustomField>