force-app/main/default/objects/Activity/fields/msf_StartDate__c.field-meta.xml
<CustomField>
    <fullName>msf_StartDate__c</fullName>
    <inlineHelpText>En el caso de ser una tarea hija, hereda la misma fecha de inicio que la tarea madre, para poder controlar la primera fecha en que las acciones asociadas con esa tarea comenzaron.</inlineHelpText>
    <label>Fecha Inicio</label>
    <type>Date</type>
</CustomField>