force-app/main/default/objects/Activity/fields/msf_TaskMarketingId__c.field-meta.xml
<CustomField>
    <fullName>msf_TaskMarketingId__c</fullName>
    <label>Id tarea de Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>