force-app/main/default/objects/Activity/fields/msf_TaskNumber__c.field-meta.xml
<CustomField>
    <fullName>msf_TaskNumber__c</fullName>
    <label>Código de tarea</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>