force-app/main/default/objects/Activity/fields/msf_Thematic2__c.field-meta.xml
<CustomField>
    <fullName>msf_Thematic2__c</fullName>
    <label>Temática 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_Thematic2</valueSetName>
    </valueSet>
</CustomField>