force-app/main/default/objects/Activity/fields/msf_Thematic__c.field-meta.xml
<CustomField>
    <fullName>msf_Thematic__c</fullName>
    <label>Temática</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MSF_Thematic</valueSetName>
    </valueSet>
</CustomField>