force-app/main/default/objects/Activity/fields/msf_TypeTemplateText__c.field-meta.xml
<CustomField>
    <fullName>msf_TypeTemplateText__c</fullName>
    <label>Tipo/Pieza Plan de Relación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>